[package]
name = "fuzzt"
version = "0.3.0"
edition = "2021"
authors = ["Luiz Otavio Vilas Boas Oliveira <luiz.vbo@gmail.com>"]
description = """
Implementations of string similarity metrics. Includes Hamming, Levenshtein,
OSA, Damerau-Levenshtein, Jaro, Jaro-Winkler, and Sørensen-Dice.
"""
license = "MIT"
readme = "README.md"
keywords = ["string", "similarity", "Hamming", "Levenshtein", "Jaro"]
homepage = "https://github.com/luizvbo/fuzzt"
repository = "https://github.com/luizvbo/fuzzt"
exclude = ["/.github", "/dev"]
categories = ["text-processing"]
rust-version = "1.70.0"

[features]
default = [
  "damerau_levenshtein", "gestalt", "hamming", "jaro",
  "levenshtein", "optimal_string_alignment", "sorensen_dice"
]
damerau_levenshtein = []
gestalt = []
hamming = []
jaro = []
levenshtein = []
optimal_string_alignment = []
sorensen_dice = []

[dev-dependencies]
rstest = "0.18.2"
